src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Geography__c</fullName>
        <inlineHelpText>Select all geographies that are involved in this campaign.</inlineHelpText>
        <label>Campaign Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Campaign Manager must be an active employee</errorMessage>
            <filterItems>
                <field>AECOM_Employee__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <description>Name passed to Satmetrix</description>
        <inlineHelpText>For Survey type campaigns only. Enter survey label, e.g., &apos;Annual APAC Client Survey 2014&apos;</inlineHelpText>
        <label>Survey Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Bounce_Rate__c</fullName>
        <description>Average bounce rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Bounce_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average bounce rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Bounce Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Click_Rate__c</fullName>
        <description>Average click rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Click_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average click rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Click Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Open_Rate__c</fullName>
        <description>Average open rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Open_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average open rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Open Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Unsubscribe_Rate__c</fullName>
        <description>Average unsubscribe rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Unsubscribe_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average unsubscribe rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Unsubscribe Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounce_Rate_Warning_Threshold_1__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The first warning threshold for bounce rate, where green becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first warning threshold for bounce rate, where green becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Bounce Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounce_Rate_Warning_Threshold_2__c</fullName>
        <defaultValue>0.03</defaultValue>
        <description>The second warning threshold for bounce rate, where yellow becomes red on the dashboard gauge.</description>
        <inlineHelpText>The second warning threshold for bounce rate, where yellow becomes red on the dashboard gauge.</inlineHelpText>
        <label>Bounce Rate Warning %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Rate_Success_Threshold_1__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The first success threshold for click rate, where red becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for click rate, where red becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Click Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Rate_Success_Threshold_2__c</fullName>
        <defaultValue>0.08</defaultValue>
        <description>The second success threshold for click rate, where yellow becomes green on the dashboard gauge.</description>
        <inlineHelpText>The second success threshold for click rate, where yellow becomes green on the dashboard gauge.</inlineHelpText>
        <label>Click Rate Success %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Last_Update_Statistics_Date__c</fullName>
        <description>The date/time of the last Update on the Campaign record.</description>
        <inlineHelpText>The date/time of the last Update on the Campaign record.</inlineHelpText>
        <label>Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Message_Statistic_Count__c</fullName>
        <description>Total number of messages in &quot;Released&quot; status, which are used for the rate averages for the campaign.</description>
        <inlineHelpText>Total number of messages in &quot;Released&quot; status, which are used for the rate averages for the campaign.</inlineHelpText>
        <label>Message Statistic Count</label>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Open_Rate_Success_Threshold_1__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>The first success threshold for open rate, where red becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for open rate, where red becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Open Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Open_Rate_Success_Threshold_2__c</fullName>
        <defaultValue>0.10</defaultValue>
        <description>The second success threshold for open rate, where yellow becomes green on the dashboard gauge.</description>
        <inlineHelpText>The second success threshold for open rate, where yellow becomes green on the dashboard gauge.</inlineHelpText>
        <label>Open Rate Success %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Targeted_Join_Date1__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Targeted Join Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Targeted_Join_Date2__c</fullName>
        <defaultValue>today() + 1</defaultValue>
        <label>Targeted Join Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Bounce_Rate__c</fullName>
        <description>Total bounce rate for messages in &quot;Released&quot; status for this campaign (used to calculate average bounce rate).</description>
        <inlineHelpText>Total bounce rate for messages in &quot;Released&quot; status for this campaign (used to calculate average bounce rate).</inlineHelpText>
        <label>Total Bounce Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Bounce_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Click_Rate__c</fullName>
        <description>Total click rate for messages in &quot;Released&quot; status for this campaign (used to calculate average click rate).</description>
        <inlineHelpText>Total click rate for messages in &quot;Released&quot; status for this campaign (used to calculate average click rate).</inlineHelpText>
        <label>Total Click Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Click_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Open_Rate__c</fullName>
        <description>Total open rate for messages in &quot;Released&quot; status for this campaign (used to calculate average open rate).</description>
        <inlineHelpText>Total open rate for messages in &quot;Released&quot; status for this campaign (used to calculate average open rate).</inlineHelpText>
        <label>Total Open Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Open_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Unsubscribe_Rate__c</fullName>
        <description>Total unsubscribe rate for messages in &quot;Released&quot; status for this campaign (used to calculate average unsubscribe rate).</description>
        <inlineHelpText>Total unsubscribe rate for messages in &quot;Released&quot; status for this campaign (used to calculate average unsubscribe rate).</inlineHelpText>
        <label>Total Unsubscribe Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Unsubscribe_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribe_Rate_Warning_Threshold_1__c</fullName>
        <defaultValue>0.001</defaultValue>
        <description>The first warning threshold for unsubscribe rate, where green becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for unsubscribe rate, where green becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Unsubscribe Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribe_Rate_Warning_Threshold_2__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The second warning threshold for unsubscribe rate, where yellow becomes red on the dashboard gauge.</description>
        <inlineHelpText>The second warning threshold for unsubscribe rate, where yellow becomes red on the dashboard gauge.</inlineHelpText>
        <label>Unsubscribe Rate Warning %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>Active_Campaigns_EU</fullName>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>anglia</value>
        </filters>
        <label>Active Campaigns Europe</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Campaigns_Middle_East</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_Geography__c</field>
            <operation>equals</operation>
            <value>Middle East</value>
        </filters>
        <label>Active Campaigns Middle East</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Campaigns_NA</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Campaign_Manager__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_Geography__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <label>Active Campaigns Americas</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>science</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>iContact_Africa_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Africa</value>
        </filters>
        <label>iContact Africa Campaign Lists</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>iContact_CMC</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>equals</operation>
            <value>CMC CASL Quebec</value>
        </filters>
        <label>iContact CMC Campaign Lists</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>iContact_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.iContact_Email_Campaign</value>
        </filters>
        <label>iContact Campaigns (All)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>iContact_Europe_BUSINESS_LINE_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Europe / BL</value>
        </filters>
        <label>iContact Europe BUSINESS LINE Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>iContact_Europe_CLIENT_TYPE_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Europe / Client Type</value>
        </filters>
        <label>iContact Europe CLIENT TYPE Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>iContact_Europe_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Europe</value>
        </filters>
        <label>iContact Europe (ALL) Campaign Lists</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>iContact_Europe_EVENT_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Europe / Event</value>
        </filters>
        <label>iContact Europe EVENT Campaign Lists</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>iContact_Europe_MAILING_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Europe / Mailing</value>
        </filters>
        <label>iContact Europe MAILING Campaign Lists</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>iContact_Europe_OFFICE_Campaign_List</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Europe / Office</value>
        </filters>
        <label>iContact Europe OFFICE Campaign Lists</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>iContact_Europe_SECTOR_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Sector</value>
        </filters>
        <label>iContact Europe SECTOR Campaign Lists</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>iContact_Europe_THOUGHT_LEADERSHIP_Lists</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>B+P / Europe / Thought Leadership</value>
        </filters>
        <label>iContact Europe THOUGHT LEADERSHIP Lists</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Standard_Salesforce_Campaign</fullName>
        <active>true</active>
        <label>Standard Salesforce Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>iContact_Email_Campaign</fullName>
        <active>true</active>
        <description>Use this record type for email marketing campaigns through iContact</description>
        <label>iContact Email Campaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>Survey_name_required</fullName>
        <active>true</active>
        <description>Requires a unique survey name if Type = Survey.</description>
        <errorConditionFormula>ISPICKVAL(Type , &quot;Survey&quot;)</errorConditionFormula>
        <errorDisplayField>Survey_Name__c</errorDisplayField>
        <errorMessage>Survey-type campaigns must have a unique Survey Name.</errorMessage>
    </validationRules>
</CustomObject>